changelog.txt
V?
  - You can now coerce playfair to parse a variable as text, numeric, or date.

V1.6
  - Playfair has moved servers and is no longer anti-union or anti-anything. All saves should work.

  - Re-coloring an arrow works now

V1.5
  - Grouped barcharts with negative values now work. This is all kinda hanging together with gum and paper clips until I rewrite all the bar chart stuff. Please make sure your values are correct and etc.

  - Fixed a bug where certain datasets had problems with axes being drawn correctly. Thanks Nick!

V1.4
  - THIS UPGRADE BREAKS A BUNCH OF STUFF ON OLD GRAPHS. You will have to redraw old graphs to get contextual menus and color changing to work. Big changes to how things work under the hood that don't really matter to users but let me know if changing colors or contextual menus are acting strangely.

V1.3
  - Stacked barcharts with negative values now work

  - Minor layout changes

V1.25
  - You can now add horizontal lines to charts with date data on the x-axis. Trend lines with slopes and vertical lines are still quite broken. This is a tricky problem.

  - fixed a bug where sometimes footers had transparent strips in them

  - Fixed the bug where hovering/unhovering sometimes shrunk text. Now text just gets a shadow on rollover.

  - multi-line text flow for hed/dek/source/note should be waaaaay better now. This does slow down redraw a bit.


V1.2
  - Fixed some of the bugs that caused trend lines to multiply when saving/loading graphs

  - added settings options for text colors

  - I think I fixed that bug where sometimes hovering/unhovering causes elements/text to shrink

  - Fixed a bug where callouts did not drag the circle with them after being loaded and dragged


V1.15
  - changed the third point option to something that should look better for large numbers of overlapping points, like in Nick's wage to inflation passthrough graph.
